Refactored code to create _grid.php, added game create validation to prevent dupes, and removed drop-down hardcodes - use db.

--- a/css/form.css
+++ b/css/form.css
@@ -145,3 +145,13 @@ div.wide.form .errorMessage {
 	clear: left;
 	padding-left: 110px;
 }
+#game-form {
+    float: left;
+    margin-left: 20px;
+    width: 320px;
+}
+
+#game-form textarea {
+    width: 100%;
+    height: 150px;
+}
