--- a/css/form.css
+++ b/css/form.css
@@ -155,3 +155,13 @@ div.wide.form .errorMessage {
     width: 100%;
     height: 150px;
 }
+
+#level-ranges .selected {
+    color: green;
+    font-weight: 700;
+}
+
+#level-ranges .warning {
+    color: red;
+    font-weight: 700;
+}
